[package]
name = "gipsat"
version = "0.1.0"
edition = "2021"

[lib]
name = "gipsat"
crate-type = ["staticlib", "rlib"]

[dependencies]
logic-form = { path = "../logic-form"}
clap = { version = "4.3.0", features = ["derive"] }
bitfield-struct = "0.5.6"
giputils = { path = "../giputils" }
satif = { path = "../satif" }
transys = { path = "../transys" }
rand = "0.8.5"
minisat = { path = "../minisat-rs" }

[features]
no_bound_check = ["logic-form/no_bound_check", "giputils/no_bound_check"]
